--- a/home/wiki/App/Personal_wikis.html
+++ b/home/wiki/App/Personal_wikis.html
@@ -95,10 +95,10 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/App/Personal_wikis/New_wiki" id="xolnki_4" title="App/Personal wikis/New wiki" class="xowa-visited">App/Personal_wikis/New_wiki</a>
+        <a href="http://xowa.org/home/wiki/App/Personal_wikis/New_wiki" id="xolnki_4" title="App/Personal wikis/New wiki">App/Personal_wikis/New_wiki</a>
       </li>
       <li>
-        <a href="http://xowa.org/home/wiki/App/Personal_wikis/Search" id="xolnki_5" title="App/Personal wikis/Search" class="xowa-visited">App/Personal_wikis/Search</a>
+        <a href="http://xowa.org/home/wiki/App/Personal_wikis/Search" id="xolnki_5" title="App/Personal wikis/Search">App/Personal_wikis/Search</a>
       </li>
     </ul>
   
