--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -424,7 +424,7 @@
     </p>
     <ul>
       <li>
-        Diagnostics: Add better messages for JTidy diagnostics. See: <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy" id="xolnki_3" title="Diagnostics/HTML Tidy" class="xowa-visited">Diagnostics/HTML_Tidy</a> <a href="http://xowa.org/home/wiki/Diagnostics/JTidy" id="xolnki_4" title="Diagnostics/JTidy">Diagnostics/JTidy</a>
+        Diagnostics: Add better messages for JTidy diagnostics. See: <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy" id="xolnki_3" title="Diagnostics/HTML Tidy">Diagnostics/HTML_Tidy</a> <a href="http://xowa.org/home/wiki/Diagnostics/JTidy" id="xolnki_4" title="Diagnostics/JTidy">Diagnostics/JTidy</a>
       </li>
     </ul>
     <p>
@@ -443,7 +443,7 @@
     </p>
     <ul>
       <li>
-        ParserFunctions: Calculate correct Hebrew date (affects script error on many he.w pages). See: <a href="https://he.wikipedia.org/wiki/מהר&quot;ל_מפראג" rel="nofollow" class="external free">https://he.wikipedia.org/wiki/מהר"ל_מפראג</a> <a href="https://he.wikipedia.org/wiki/רש" rel="nofollow" class="external free">https://he.wikipedia.org/wiki/רש</a>"י <a href="https://he.wikipedia.org/wiki/אברהם_יצחק_הכהן_קוק" rel="nofollow" class="external free">https://he.wikipedia.org/wiki/אברהם_יצחק_הכהן_קוק</a> <a href="https://he.wikipedia.org/wiki/אלעזר_מנחם_מן_שך" rel="nofollow" class="external free">https://he.wikipedia.org/wiki/אלעזר_מנחם_מן_שך</a> <a href="https://he.wikipedia.org/wiki/ויקיפדיה:עמוד_ראשי/מקבץ_ערכים" rel="nofollow" class="external free">https://he.wikipedia.org/wiki/ויקיפדיה:עמוד_ראשי/מקבץ_ערכים</a>
+        ParserFunctions: Calculate correct Hebrew date (affects script error on many he.w pages). See: <a href="/site/he.wikipedia.org/wiki/%D7%9E%D7%94%D7%A8%22%D7%9C_%D7%9E%D7%A4%D7%A8%D7%90%D7%92">https://he.wikipedia.org/wiki/מהר"ל_מפראג</a> <a href="/site/he.wikipedia.org/wiki/%D7%A8%D7%A9">https://he.wikipedia.org/wiki/רש</a>"י <a href="/site/he.wikipedia.org/wiki/%D7%90%D7%91%D7%A8%D7%94%D7%9D_%D7%99%D7%A6%D7%97%D7%A7_%D7%94%D7%9B%D7%94%D7%9F_%D7%A7%D7%95%D7%A7">https://he.wikipedia.org/wiki/אברהם_יצחק_הכהן_קוק</a> <a href="/site/he.wikipedia.org/wiki/%D7%90%D7%9C%D7%A2%D7%96%D7%A8_%D7%9E%D7%A0%D7%97%D7%9D_%D7%9E%D7%9F_%D7%A9%D7%9A">https://he.wikipedia.org/wiki/אלעזר_מנחם_מן_שך</a> <a href="/site/he.wikipedia.org/wiki/%D7%95%D7%99%D7%A7%D7%99%D7%A4%D7%93%D7%99%D7%94:%D7%A2%D7%9E%D7%95%D7%93_%D7%A8%D7%90%D7%A9%D7%99/%D7%9E%D7%A7%D7%91%D7%A5_%D7%A2%D7%A8%D7%9B%D7%99%D7%9D">https://he.wikipedia.org/wiki/ויקיפדיה:עמוד_ראשי/מקבץ_ערכים</a>
       </li>
       <li>
         ParserFunctions.Grammar: Implement Hebrew grammar (affects sidebar showing grammar for some Hebrew wikis). See: <a href="https://he.wikibooks.org/wiki/עמוד_ראשי" rel="nofollow" class="external free">https://he.wikibooks.org/wiki/עמוד_ראשי</a>
@@ -477,7 +477,7 @@
         Xml_dump: Use &lt;siteinfo&gt;'s &lt;case&gt;, if case attribute is not available at "&lt;namespace&gt;" level (affects some xml dumps not being importable) {detected by paul2520}. See: <a href="https://dumps.wikimedia.org/sep11wiki" rel="nofollow" class="external free">https://dumps.wikimedia.org/sep11wiki</a>
       </li>
       <li>
-        Parser.Lnki: Use 1st imagetype argument when multiple are listed of "thumb|frame|frameless" (affects some pages showing incorrectly sized images); EX:[[File:A.png|thumb|frame]] -&gt; thumb x&gt; frame. See: <a href="https://he.wikipedia.org/wiki/מספן_המודיעין" rel="nofollow" class="external free">https://he.wikipedia.org/wiki/מספן_המודיעין</a>
+        Parser.Lnki: Use 1st imagetype argument when multiple are listed of "thumb|frame|frameless" (affects some pages showing incorrectly sized images); EX:[[File:A.png|thumb|frame]] -&gt; thumb x&gt; frame. See: <a href="/site/he.wikipedia.org/wiki/%D7%9E%D7%A1%D7%A4%D7%9F_%D7%94%D7%9E%D7%95%D7%93%D7%99%D7%A2%D7%99%D7%9F">https://he.wikipedia.org/wiki/מספן_המודיעין</a>
       </li>
     </ul>
     <p>
@@ -897,7 +897,7 @@
     </p>
     <ul>
       <li>
-        Graph: Add support for Graph extension; EX:/bin/any/xowa/xtns/Graph {detected by gnosygnu.build.warning}. See: <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Graph" id="xolnki_12" title="Diagnostics/Javascript/Graph">Diagnostics/Javascript/Graph</a> <a href="/site/en.wikipedia.org/wiki/Greek_withdrawal_from_the_eurozone">https://en.wikipedia.org/wiki/Greek_withdrawal_from_the_eurozone</a> <a href="https://de.wikipedia.org/wiki/Freital" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Freital</a>
+        Graph: Add support for Graph extension; EX:/bin/any/xowa/xtns/Graph {detected by gnosygnu.build.warning}. See: <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Graph" id="xolnki_12" title="Diagnostics/Javascript/Graph">Diagnostics/Javascript/Graph</a> <a href="/site/en.wikipedia.org/wiki/Greek_withdrawal_from_the_eurozone">https://en.wikipedia.org/wiki/Greek_withdrawal_from_the_eurozone</a> <a href="/site/de.wikipedia.org/wiki/Freital">https://de.wikipedia.org/wiki/Freital</a>
       </li>
     </ul>
     <p>
@@ -1313,10 +1313,10 @@
     </p>
     <ul>
       <li>
-        Scribunto.Wikibase: Always use v2 entity style (affects several pages in ja.w showing script error when using Module:Location_map ) {detected by gnosygnu.build.warning}. See: <a href="https://ja.wikipedia.org/wiki/東京競馬場" rel="nofollow" class="external free">https://ja.wikipedia.org/wiki/東京競馬場</a>
+        Scribunto.Wikibase: Always use v2 entity style (affects several pages in ja.w showing script error when using Module:Location_map ) {detected by gnosygnu.build.warning}. See: <a href="/site/ja.wikipedia.org/wiki/%E6%9D%B1%E4%BA%AC%E7%AB%B6%E9%A6%AC%E5%A0%B4">https://ja.wikipedia.org/wiki/東京競馬場</a>
       </li>
       <li>
-        Scribunto.Wikibase: Update .lua files to latest version (affects several pages in ja.w showing script error when using Module:Location_map ); EX:bin\any\xowa\xtns\Scribunto\engines\LuaCommon\lualib\mw.wikibase* {detected by gnosygnu.build.warning}. See: <a href="https://ja.wikipedia.org/wiki/東京競馬場" rel="nofollow" class="external free">https://ja.wikipedia.org/wiki/東京競馬場</a>
+        Scribunto.Wikibase: Update .lua files to latest version (affects several pages in ja.w showing script error when using Module:Location_map ); EX:bin\any\xowa\xtns\Scribunto\engines\LuaCommon\lualib\mw.wikibase* {detected by gnosygnu.build.warning}. See: <a href="/site/ja.wikipedia.org/wiki/%E6%9D%B1%E4%BA%AC%E7%AB%B6%E9%A6%AC%E5%A0%B4">https://ja.wikipedia.org/wiki/東京競馬場</a>
       </li>
       <li>
         Scribunto: Support Lua frontier pattern %f (affects none known); EX:gsub('thE QUICK brOWN FOx JUMPS', '%f[%a]%u+%f[%A]', '-') -&gt; 'thE - brOWN FOx -'. See: <a href="http://lua-users.org/wiki/FrontierPattern" rel="nofollow" class="external free">http://lua-users.org/wiki/FrontierPattern</a>
@@ -1337,7 +1337,7 @@
         ParserFunctions: Change scale for Decimal from 28 to 14.
       </li>
       <li>
-        Title: Convert extended whitespace characters to whitespace (affects several pages in ja.w showing script error when using Module:Location_map ) {detected by gnosygnu.build.warning}. See: <a href="https://ja.wikipedia.org/wiki/ジョージ湖の戦い" rel="nofollow" class="external free">https://ja.wikipedia.org/wiki/ジョージ湖の戦い</a> <a href="https://ja.wikipedia.org/wiki/Template:Location_map_USA　New_York" rel="nofollow" class="external free">https://ja.wikipedia.org/wiki/Template:Location_map_USA　New_York</a>
+        Title: Convert extended whitespace characters to whitespace (affects several pages in ja.w showing script error when using Module:Location_map ) {detected by gnosygnu.build.warning}. See: <a href="/site/ja.wikipedia.org/wiki/%E3%82%B8%E3%83%A7%E3%83%BC%E3%82%B8%E6%B9%96%E3%81%AE%E6%88%A6%E3%81%84">https://ja.wikipedia.org/wiki/ジョージ湖の戦い</a> <a href="/site/ja.wikipedia.org/wiki/Template:Location_map_USA%E3%80%80New_York">https://ja.wikipedia.org/wiki/Template:Location_map_USA　New_York</a>
       </li>
     </ul>
     <p>
@@ -1876,7 +1876,7 @@
         Javascript: Highlight all words when finding text {contributed by anonymous4}. See: press Ctrl+F and type
       </li>
       <li>
-        File: Download files into *-file-user.xowa databases (no more #meta). See: <a href="http://xowa.org/home/wiki/App/Basics/Files" id="xolnki_34" title="App/Basics/Files" class="xowa-visited">App/Basics/Files</a>
+        File: Download files into *-file-user.xowa databases (no more #meta). See: <a href="http://xowa.org/home/wiki/App/Basics/Files" id="xolnki_34" title="App/Basics/Files">App/Basics/Files</a>
       </li>
       <li>
         File: Show File page if clicking on image without commons while online. See: <a href="/site/en.wikipedia.org/wiki/File:Volc%C3%A1n_Chimborazo,_%22El_Taita_Chimborazo%22.jpg">https://en.wikipedia.org/wiki/File:Volcán_Chimborazo,_%22El_Taita_Chimborazo%22.jpg</a>
@@ -2760,7 +2760,7 @@
     </p>
     <ul>
       <li>
-        Parser.Link: Limit upright values to 19 digits of precision (affects 2 de.w pages failing to show image); EX:upright=1.333333333333333333333333333333333333333333333333333333333333333333333. See: <a href="https://de.wikipedia.org/wiki/Feuerland" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Feuerland</a> <a href="https://de.wikipedia.org/wiki/Baie-Mahault" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Baie-Mahault</a>
+        Parser.Link: Limit upright values to 19 digits of precision (affects 2 de.w pages failing to show image); EX:upright=1.333333333333333333333333333333333333333333333333333333333333333333333. See: <a href="/site/de.wikipedia.org/wiki/Feuerland">https://de.wikipedia.org/wiki/Feuerland</a> <a href="/site/de.wikipedia.org/wiki/Baie-Mahault">https://de.wikipedia.org/wiki/Baie-Mahault</a>
       </li>
     </ul>
     <p>
@@ -2861,10 +2861,10 @@
     </p>
     <ul>
       <li>
-        Parser.Nowiki: Escape - within nowiki (affects 1 de.w page with incorrect tables); EX:|&lt;nowiki&gt;-&lt;nowiki&gt; {detected by Schnark}. See: <a href="https://de.wikipedia.org/wiki/Liste_von_Vereinen_und_Vereinigungen_von_Gläubigen_(römisch-katholische_Kirche)" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Liste_von_Vereinen_und_Vereinigungen_von_Gläubigen_(römisch-katholische_Kirche)</a>
+        Parser.Nowiki: Escape - within nowiki (affects 1 de.w page with incorrect tables); EX:|&lt;nowiki&gt;-&lt;nowiki&gt; {detected by Schnark}. See: <a href="/site/de.wikipedia.org/wiki/Liste_von_Vereinen_und_Vereinigungen_von_Gl%C3%A4ubigen_(r%C3%B6misch-katholische_Kirche)">https://de.wikipedia.org/wiki/Liste_von_Vereinen_und_Vereinigungen_von_Gläubigen_(römisch-katholische_Kirche)</a>
       </li>
       <li>
-        Parser.ExternalLinks: Do not ignore ":" for list dd when preceded by invalid protocol (affects 1 de.w page with incorrect list/ boundaries); EX:"; attl: b" -&gt; ":" should still be processed for &lt;dd&gt; {detected by Schnark}. See: <a href="https://de.wikipedia.org/wiki/Mord_(Deutschland)#Besonders_verwerfliche_Begehungsweise" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Mord_(Deutschland)#Besonders_verwerfliche_Begehungsweise</a>
+        Parser.ExternalLinks: Do not ignore ":" for list dd when preceded by invalid protocol (affects 1 de.w page with incorrect list/ boundaries); EX:"; attl: b" -&gt; ":" should still be processed for &lt;dd&gt; {detected by Schnark}. See: <a href="/site/de.wikipedia.org/wiki/Mord_(Deutschland)">https://de.wikipedia.org/wiki/Mord_(Deutschland)#Besonders_verwerfliche_Begehungsweise</a>
       </li>
       <li>
         Parser.Template: Ignore safesubst for IsSubsting (affects 1 en.w page failing to load with stack overflow error). See: <a href="/site/en.wikipedia.org/wiki/Wikipedia:WikiProject_Celtic_history_and_culture">https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Celtic_history_and_culture</a>
