--- a/home/wiki/Change_log/2018.html
+++ b/home/wiki/Change_log/2018.html
@@ -197,7 +197,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Handle empty classes in img tag.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://de.wikipedia.org/wiki/Butter" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Butter</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/de.wikipedia.org/wiki/Butter">https://de.wikipedia.org/wiki/Butter</a>
       </dd>
     </dl>
     <ul>
@@ -362,7 +362,7 @@
         <span style='font-variant:small-caps'>Example</span>: /xowa/bin/any/xowa/xtns/JsonConfig.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://de.wikipedia.org/wiki/Reicholzheim" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Reicholzheim</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/de.wikipedia.org/wiki/Reicholzheim">https://de.wikipedia.org/wiki/Reicholzheim</a>
       </dd>
     </dl>
     <ul>
