--- a/home/wiki/Change_log/v3.10.3.1.html
+++ b/home/wiki/Change_log/v3.10.3.1.html
@@ -219,7 +219,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Do not automatically url-decode query arguments.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://de.wikipedia.org/wiki/Kategorie:Begriffsklärung" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Kategorie:Begriffsklärung</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/de.wikipedia.org/wiki/Kategorie:Begriffskl%C3%A4rung">https://de.wikipedia.org/wiki/Kategorie:Begriffsklärung</a>
       </dd>
     </dl>
     <ul>
