--- a/home/wiki/Change_log/v3.12.1.1.html
+++ b/home/wiki/Change_log/v3.12.1.1.html
@@ -110,7 +110,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Ignore TOC magic word on transcluded pages.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://de.wikipedia.org/wiki/Game_of_Thrones" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Game_of_Thrones</a> <a href="https://de.wikipedia.org/wiki/The_Walking_Dead_(Fernsehserie)" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/The_Walking_Dead_(Fernsehserie)</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/de.wikipedia.org/wiki/Game_of_Thrones">https://de.wikipedia.org/wiki/Game_of_Thrones</a> <a href="/site/de.wikipedia.org/wiki/The_Walking_Dead_(Fernsehserie)">https://de.wikipedia.org/wiki/The_Walking_Dead_(Fernsehserie)</a>
       </dd>
     </dl>
     <ul>
