--- a/home/wiki/Change_log/v3.6.3.1.html
+++ b/home/wiki/Change_log/v3.6.3.1.html
@@ -283,7 +283,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://de.wikipedia.org/wiki/Spezial:Zufällige_Seite" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Spezial:Zufällige_Seite</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/de.wikipedia.org/wiki/Spezial:Zuf%C3%A4llige_Seite">https://de.wikipedia.org/wiki/Spezial:Zufällige_Seite</a>
       </dd>
     </dl>
     <p>
