--- a/home/wiki/Change_log/v4.1.0.1702.html
+++ b/home/wiki/Change_log/v4.1.0.1702.html
@@ -121,7 +121,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.files.general" id="xolnki_3" title="Special:XowaCfg?grp=xowa.files.general" class="xowa-visited">Special:XowaCfg?grp=xowa.files.general</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.files.general" id="xolnki_3" title="Special:XowaCfg?grp=xowa.files.general">Special:XowaCfg?grp=xowa.files.general</a>
       </dd>
     </dl>
     <ul>
