--- a/home/wiki/Change_log/v4.5.0.1703.html
+++ b/home/wiki/Change_log/v4.5.0.1703.html
@@ -169,7 +169,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://de.wikipedia.org/wiki/Wikipedia:Quiz/Geschichte" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Wikipedia:Quiz/Geschichte</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/de.wikipedia.org/wiki/Wikipedia:Quiz/Geschichte">https://de.wikipedia.org/wiki/Wikipedia:Quiz/Geschichte</a>
       </dd>
     </dl>
     <ul>
