--- a/home/wiki/Change_log/v4.5.19.1801.html
+++ b/home/wiki/Change_log/v4.5.19.1801.html
@@ -136,7 +136,7 @@
         <span style='font-variant:small-caps'>Example</span>: /xowa/bin/any/xowa/xtns/JsonConfig.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://de.wikipedia.org/wiki/Reicholzheim" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Reicholzheim</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/de.wikipedia.org/wiki/Reicholzheim">https://de.wikipedia.org/wiki/Reicholzheim</a>
       </dd>
     </dl>
     <ul>
