--- a/home/wiki/Change_log/v4.5.7.1706.html
+++ b/home/wiki/Change_log/v4.5.7.1706.html
@@ -111,7 +111,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Add 'redirectTarget' to Scrib_lib_title.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikisource.org/wiki/La_Dispute" rel="nofollow" class="external free">https://fr.wikisource.org/wiki/La_Dispute</a> <a href="https://fr.wikisource.org/wiki/Les_Acteurs_de_bonne_foi" rel="nofollow" class="external free">https://fr.wikisource.org/wiki/Les_Acteurs_de_bonne_foi</a> <a href="https://fr.wikisource.org/wiki/Le_Lion" rel="nofollow" class="external free">https://fr.wikisource.org/wiki/Le_Lion</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikisource.org/wiki/La_Dispute">https://fr.wikisource.org/wiki/La_Dispute</a> <a href="/site/fr.wikisource.org/wiki/Les_Acteurs_de_bonne_foi">https://fr.wikisource.org/wiki/Les_Acteurs_de_bonne_foi</a> <a href="/site/fr.wikisource.org/wiki/Le_Lion">https://fr.wikisource.org/wiki/Le_Lion</a>
       </dd>
     </dl>
     <ul>
@@ -150,7 +150,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Ignore NOTOC commands at template level.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://de.wikipedia.org/wiki/13._Jahrhundert" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/13._Jahrhundert</a> <a href="https://de.wikipedia.org/wiki/Vorlage:Artikel_Jahrhundert" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Vorlage:Artikel_Jahrhundert</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/de.wikipedia.org/wiki/13._Jahrhundert">https://de.wikipedia.org/wiki/13._Jahrhundert</a> <a href="/site/de.wikipedia.org/wiki/Vorlage:Artikel_Jahrhundert">https://de.wikipedia.org/wiki/Vorlage:Artikel_Jahrhundert</a>
       </dd>
     </dl>
     <ul>
@@ -160,7 +160,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikisource.org/wiki/La_Dispute" rel="nofollow" class="external free">https://fr.wikisource.org/wiki/La_Dispute</a> <a href="https://fr.wikisource.org/wiki/Les_Acteurs_de_bonne_foi" rel="nofollow" class="external free">https://fr.wikisource.org/wiki/Les_Acteurs_de_bonne_foi</a> <a href="https://fr.wikisource.org/wiki/Le_Lion" rel="nofollow" class="external free">https://fr.wikisource.org/wiki/Le_Lion</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikisource.org/wiki/La_Dispute">https://fr.wikisource.org/wiki/La_Dispute</a> <a href="/site/fr.wikisource.org/wiki/Les_Acteurs_de_bonne_foi">https://fr.wikisource.org/wiki/Les_Acteurs_de_bonne_foi</a> <a href="/site/fr.wikisource.org/wiki/Le_Lion">https://fr.wikisource.org/wiki/Le_Lion</a>
       </dd>
     </dl>
     <ul>
@@ -241,7 +241,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://de.wikipedia.org/wiki/Herbizid" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Herbizid</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/de.wikipedia.org/wiki/Herbizid">https://de.wikipedia.org/wiki/Herbizid</a>
       </dd>
     </dl>
     <ul>
