--- a/home/wiki/Change_log/v4.6.0.1903.html
+++ b/home/wiki/Change_log/v4.6.0.1903.html
@@ -704,7 +704,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Set src_bgn at start of block, not after video element.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://de.wikipedia.org/wiki/München" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/München</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/de.wikipedia.org/wiki/M%C3%BCnchen">https://de.wikipedia.org/wiki/München</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/369" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/369</a>
