--- a/home/wiki/Change_log/v4.6.5.1911.html
+++ b/home/wiki/Change_log/v4.6.5.1911.html
@@ -2,7 +2,7 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Help/Download XOWA - XOWA</title>
+  <title>Change log/v4.6.5.1911 - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   
@@ -11,115 +11,12 @@
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>Help/Download XOWA</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>Change log/v4.6.5.1911</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
-    <div id="toc" class="toc">
-      <div id="toctitle" class="toctitle">
-        <h2>
-          Contents
-        </h2>
-      </div>
-      <ul>
-        <li class="toclevel-1 tocsection-1">
-          <a href="#Windows"><span class="tocnumber">1</span> <span class="toctext">Windows</span></a>
-        </li>
-        <li class="toclevel-1 tocsection-2">
-          <a href="#Linux"><span class="tocnumber">2</span> <span class="toctext">Linux</span></a>
-        </li>
-        <li class="toclevel-1 tocsection-3">
-          <a href="#Mac_OS_X"><span class="tocnumber">3</span> <span class="toctext">Mac OS X</span></a>
-        </li>
-        <li class="toclevel-1 tocsection-4">
-          <a href="#Raspberry_Pi"><span class="tocnumber">4</span> <span class="toctext">Raspberry Pi</span></a>
-        </li>
-        <li class="toclevel-1 tocsection-5">
-          <a href="#Android"><span class="tocnumber">5</span> <span class="toctext">Android</span></a>
-        </li>
-        <li class="toclevel-1 tocsection-6">
-          <a href="#Source_code_(Desktop)"><span class="tocnumber">6</span> <span class="toctext">Source code (Desktop)</span></a>
-        </li>
-        <li class="toclevel-1 tocsection-7">
-          <a href="#Source_code_(Android)"><span class="tocnumber">7</span> <span class="toctext">Source code (Android)</span></a>
-        </li>
-        <li class="toclevel-1 tocsection-8">
-          <a href="#v4.6.5.1911_(2019-09-25)"><span class="tocnumber">8</span> <span class="toctext">v4.6.5.1911 (2019-09-25)</span></a> 
-          <ul>
-            <li class="toclevel-2 tocsection-9">
-              <a href="#PC"><span class="tocnumber">8.1</span> <span class="toctext">PC</span></a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-    <h2>
-      <span class="mw-headline" id="Windows">Windows</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.5.1911/xowa_app_windows_64_v4.6.5.1911.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
-      </li>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.5.1911/xowa_app_windows_v4.6.5.1911.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Linux">Linux</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.5.1911/xowa_app_linux_64_v4.6.5.1911.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
-      </li>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.5.1911/xowa_app_linux_v4.6.5.1911.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Mac_OS_X">Mac OS X</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.5.1911/xowa_app_macosx_64_v4.6.5.1911.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
-      </li>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.5.1911/xowa_app_macosx_v4.6.5.1911.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Raspberry_Pi">Raspberry Pi</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.6.5.1911/xowa_app_arm_v4.6.5.1911.zip" rel="nofollow" class="external text">Raspberry Pi</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Android">Android</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v4.5.19.1801/xowa_app_android_v4.5.19.1801.apk" rel="nofollow" class="external text">Android</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Source_code_(Desktop)">Source code (Desktop)</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa/archive/v4.6.5.1911.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Source_code_(Android)">Source code (Android)</span>
-    </h2>
-    <ul>
-      <li>
-        <a href="https://github.com/gnosygnu/xowa_android/archive/master.zip" rel="nofollow" class="external text">Source code (Android)</a>
-      </li>
-    </ul>
     <h2>
       <span class="mw-headline" id="v4.6.5.1911_(2019-09-25)">v4.6.5.1911 (2019-09-25)</span>
     </h2>
