--- a/home/wiki/Dashboard/Image_databases.html
+++ b/home/wiki/Dashboard/Image_databases.html
@@ -494,7 +494,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://ja.wikipedia.org" rel="nofollow" class="external free">https://ja.wikipedia.org</a>
+            <a href="/site/ja.wikipedia.org/wiki/">https://ja.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -1271,7 +1271,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://he.wikipedia.org" rel="nofollow" class="external free">https://he.wikipedia.org</a><br>
+            <a href="/site/he.wikipedia.org/wiki/">https://he.wikipedia.org</a><br>
             <a href="https://he.wiktionary.org" rel="nofollow" class="external free">https://he.wiktionary.org</a><br>
             <a href="https://he.wikisource.org" rel="nofollow" class="external free">https://he.wikisource.org</a><br>
             <a href="https://he.wikivoyage.org" rel="nofollow" class="external free">https://he.wikivoyage.org</a><br>
