--- a/home/wiki/Diagnostics/Scribunto/Luaj.html
+++ b/home/wiki/Diagnostics/Scribunto/Luaj.html
@@ -915,6 +915,23 @@
           </p>
         </td>
       </tr>
+      <tr>
+        <td>
+          <span style='color: green;'>pass</span>
+        </td>
+        <td>
+          fails if "a1"
+        </td>
+        <td>
+          {{#invoke:Diagnostics/Luaj|loadDataTest}}
+        </td>
+        <td>
+          pass1 
+          <p>
+            <br>
+          </p>
+        </td>
+      </tr>
     </table>
   
     </div>
