--- a/home/wiki/Help/About.html
+++ b/home/wiki/Help/About.html
@@ -40,7 +40,7 @@
           version:
         </td>
         <td>
-          4.6.2.1907 <b>(<a href="http://xowa.org/home/wiki/Change_log" id="xolnki_2" title="Change log" class="xowa-visited">view changes</a>)</b>
+          4.6.5.1911 <b>(<a href="http://xowa.org/home/wiki/Change_log" id="xolnki_2" title="Change log" class="xowa-visited">view changes</a>)</b>
         </td>
       </tr>
       <tr>
@@ -48,7 +48,7 @@
           build date:
         </td>
         <td>
-          2019-07-14 03:44:04
+          2019-11-03 16:33:34
         </td>
       </tr>
       <tr>
@@ -110,7 +110,7 @@
             </tr>
             <tr>
               <td>
-                <a href="https://de.wikipedia.org/wiki/Benutzer:Schnark" rel="nofollow" class="external text">Schnark</a>
+                <a href="/site/de.wikipedia.org/wiki/Benutzer:Schnark">Schnark</a>
               </td>
               <td>
                 <ul>
