--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -164,7 +164,7 @@
               <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikia.com" id="xolnki_23" title="App/Wiki types/Wikia.com">Wikia.com and other MediaWiki wikis</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Personal_wikis" id="xolnki_24" title="App/Personal wikis" class="xowa-visited">Personal wikis</a>
+              <a href="http://xowa.org/home/wiki/App/Personal_wikis" id="xolnki_24" title="App/Personal wikis">Personal wikis</a>
             </li>
           </ul>
         </td>
@@ -184,7 +184,7 @@
               <a href="http://xowa.org/home/wiki/Dev/Command-line" id="xolnki_25" title="Dev/Command-line">Overview</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps" id="xolnki_26" title="Dev/Command-line/Dumps" class="xowa-visited">Image dumps</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps" id="xolnki_26" title="Dev/Command-line/Dumps">Image dumps</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Dev/Command-line/Wikidata" id="xolnki_27" title="Dev/Command-line/Wikidata">Wikidata</a>
@@ -384,7 +384,7 @@
               <a href="http://xowa.org/home/wiki/App/Wiki_types/Commons" id="xolnki_63" title="App/Wiki types/Commons">Wikis/Commons</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Basics/Files" id="xolnki_64" title="App/Basics/Files" class="xowa-visited">Files</a>
+              <a href="http://xowa.org/home/wiki/App/Basics/Files" id="xolnki_64" title="App/Basics/Files">Files</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Xtn/Android" id="xolnki_65" title="App/Xtn/Android">Android/Alpha</a>
