--- a/home/wiki/Android/Setup.html
+++ b/home/wiki/Android/Setup.html
@@ -485,7 +485,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://de.wikipedia.org" rel="nofollow" class="external free">https://de.wikipedia.org</a>
+            <a href="/site/de.wikipedia.org/wiki/">https://de.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
