--- a/home/wiki/App/Xtn/Html/Popups.html
+++ b/home/wiki/App/Xtn/Html/Popups.html
@@ -122,7 +122,7 @@
       <b>XOWA Popups</b> is based on MediaWiki's <a href="https://www.mediawiki.org/wiki/Extension:Hovercards" rel="nofollow" class="external text">Hovercards</a> and <a href="/site/en.wikipedia.org/wiki/Wikipedia:Tools/Navigation_popups">Navigation popups</a>. It does not aim to be an exact reproduction of either, but picks the best features from each.
     </p>
     <p>
-      The javascript was modified from Reference tooltips, which was kindly provided by <a href="https://de.wikipedia.org/wiki/Benzuter:Schnark" rel="nofollow" class="external text">Schnark</a>.
+      The javascript was modified from Reference tooltips, which was kindly provided by <a href="/site/de.wikipedia.org/wiki/Benzuter:Schnark">Schnark</a>.
     </p>
     <p>
       <br>
