--- a/home/wiki/Change_log/2017.html
+++ b/home/wiki/Change_log/2017.html
@@ -474,7 +474,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Add 'redirectTarget' to Scrib_lib_title.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikisource.org/wiki/La_Dispute" rel="nofollow" class="external free">https://fr.wikisource.org/wiki/La_Dispute</a> <a href="https://fr.wikisource.org/wiki/Les_Acteurs_de_bonne_foi" rel="nofollow" class="external free">https://fr.wikisource.org/wiki/Les_Acteurs_de_bonne_foi</a> <a href="https://fr.wikisource.org/wiki/Le_Lion" rel="nofollow" class="external free">https://fr.wikisource.org/wiki/Le_Lion</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikisource.org/wiki/La_Dispute">https://fr.wikisource.org/wiki/La_Dispute</a> <a href="/site/fr.wikisource.org/wiki/Les_Acteurs_de_bonne_foi">https://fr.wikisource.org/wiki/Les_Acteurs_de_bonne_foi</a> <a href="/site/fr.wikisource.org/wiki/Le_Lion">https://fr.wikisource.org/wiki/Le_Lion</a>
       </dd>
     </dl>
     <ul>
@@ -513,7 +513,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Ignore NOTOC commands at template level.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://de.wikipedia.org/wiki/13._Jahrhundert" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/13._Jahrhundert</a> <a href="https://de.wikipedia.org/wiki/Vorlage:Artikel_Jahrhundert" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Vorlage:Artikel_Jahrhundert</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/de.wikipedia.org/wiki/13._Jahrhundert">https://de.wikipedia.org/wiki/13._Jahrhundert</a> <a href="/site/de.wikipedia.org/wiki/Vorlage:Artikel_Jahrhundert">https://de.wikipedia.org/wiki/Vorlage:Artikel_Jahrhundert</a>
       </dd>
     </dl>
     <ul>
@@ -523,7 +523,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikisource.org/wiki/La_Dispute" rel="nofollow" class="external free">https://fr.wikisource.org/wiki/La_Dispute</a> <a href="https://fr.wikisource.org/wiki/Les_Acteurs_de_bonne_foi" rel="nofollow" class="external free">https://fr.wikisource.org/wiki/Les_Acteurs_de_bonne_foi</a> <a href="https://fr.wikisource.org/wiki/Le_Lion" rel="nofollow" class="external free">https://fr.wikisource.org/wiki/Le_Lion</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/fr.wikisource.org/wiki/La_Dispute">https://fr.wikisource.org/wiki/La_Dispute</a> <a href="/site/fr.wikisource.org/wiki/Les_Acteurs_de_bonne_foi">https://fr.wikisource.org/wiki/Les_Acteurs_de_bonne_foi</a> <a href="/site/fr.wikisource.org/wiki/Le_Lion">https://fr.wikisource.org/wiki/Le_Lion</a>
       </dd>
     </dl>
     <ul>
@@ -604,7 +604,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://de.wikipedia.org/wiki/Herbizid" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Herbizid</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/de.wikipedia.org/wiki/Herbizid">https://de.wikipedia.org/wiki/Herbizid</a>
       </dd>
     </dl>
     <ul>
@@ -1105,7 +1105,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://de.wikipedia.org/wiki/Wikipedia:Quiz/Geschichte" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Wikipedia:Quiz/Geschichte</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/de.wikipedia.org/wiki/Wikipedia:Quiz/Geschichte">https://de.wikipedia.org/wiki/Wikipedia:Quiz/Geschichte</a>
       </dd>
     </dl>
     <ul>
@@ -1661,7 +1661,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.files.general" id="xolnki_31" title="Special:XowaCfg?grp=xowa.files.general" class="xowa-visited">Special:XowaCfg?grp=xowa.files.general</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.files.general" id="xolnki_31" title="Special:XowaCfg?grp=xowa.files.general">Special:XowaCfg?grp=xowa.files.general</a>
       </dd>
     </dl>
     <ul>
