--- a/home/wiki/Change_log/v4.5.21.1808.html
+++ b/home/wiki/Change_log/v4.5.21.1808.html
@@ -166,7 +166,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Handle empty classes in img tag.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://de.wikipedia.org/wiki/Butter" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Butter</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/de.wikipedia.org/wiki/Butter">https://de.wikipedia.org/wiki/Butter</a>
       </dd>
     </dl>
     <ul>
