--- a/home/wiki/Dashboard/Import/Online.html
+++ b/home/wiki/Dashboard/Import/Online.html
@@ -145,7 +145,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('species.wikimedia.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="http://species.wikimedia.org" rel="nofollow" class="external free">http://species.wikimedia.org</a>
+          <a href="/site/species.wikimedia.org/wiki/">http://species.wikimedia.org</a>
         </td>
         <td>
         </td>
@@ -453,7 +453,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('de.wikipedia.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="http://de.wikipedia.org" rel="nofollow" class="external free">http://de.wikipedia.org</a>
+          <a href="/site/de.wikipedia.org/wiki/">http://de.wikipedia.org</a>
         </td>
         <td>
           German
@@ -921,7 +921,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('fr.wikisource.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="http://fr.wikisource.org" rel="nofollow" class="external free">http://fr.wikisource.org</a>
+          <a href="/site/fr.wikisource.org/wiki/">http://fr.wikisource.org</a>
         </td>
         <td>
           French
@@ -1285,7 +1285,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('ja.wikipedia.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="http://ja.wikipedia.org" rel="nofollow" class="external free">http://ja.wikipedia.org</a>
+          <a href="/site/ja.wikipedia.org/wiki/">http://ja.wikipedia.org</a>
         </td>
         <td>
           Japanese
@@ -6589,7 +6589,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('he.wikipedia.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="http://he.wikipedia.org" rel="nofollow" class="external free">http://he.wikipedia.org</a>
+          <a href="/site/he.wikipedia.org/wiki/">http://he.wikipedia.org</a>
         </td>
         <td>
           Hebrew
