--- a/home/wiki/Diagnostics.html
+++ b/home/wiki/Diagnostics.html
@@ -28,7 +28,7 @@
         <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/All" id="xolnki_2" title="Diagnostics/Javascript/All">Diagnostics/Javascript/All</a> 
         <ul>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents" id="xolnki_3" title="Diagnostics/Javascript/Table of contents" class="xowa-visited">Diagnostics/Javascript/Table_of_contents</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents" id="xolnki_3" title="Diagnostics/Javascript/Table of contents">Diagnostics/Javascript/Table_of_contents</a>
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Redlink" id="xolnki_4" title="Diagnostics/Javascript/Redlink">Diagnostics/Javascript/Redlink</a>
@@ -52,10 +52,10 @@
             <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Timeline" id="xolnki_10" title="Diagnostics/Javascript/Timeline">Diagnostics/Javascript/Timeline</a>
           </li>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Graph/v1" id="xolnki_11" title="Diagnostics/Javascript/Graph/v1" class="xowa-visited">Diagnostics/Javascript/Graph/v1</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Graph/v1" id="xolnki_11" title="Diagnostics/Javascript/Graph/v1">Diagnostics/Javascript/Graph/v1</a>
           </li>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Graph/v2" id="xolnki_12" title="Diagnostics/Javascript/Graph/v2" class="xowa-visited">Diagnostics/Javascript/Graph/v2</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Graph/v2" id="xolnki_12" title="Diagnostics/Javascript/Graph/v2">Diagnostics/Javascript/Graph/v2</a>
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Graph/Wikiraw" id="xolnki_13" title="Diagnostics/Javascript/Graph/Wikiraw">Diagnostics/Javascript/Graph/Wikiraw</a>
@@ -84,7 +84,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy" id="xolnki_17" title="Diagnostics/HTML Tidy" class="xowa-visited">Diagnostics/HTML_Tidy</a>
+        <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy" id="xolnki_17" title="Diagnostics/HTML Tidy">Diagnostics/HTML_Tidy</a>
       </li>
       <li>
         <a href="http://xowa.org/home/wiki/Diagnostics/JTidy" id="xolnki_18" title="Diagnostics/JTidy">Diagnostics/JTidy</a>
@@ -98,10 +98,10 @@
         <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/All" id="xolnki_19" title="Diagnostics/Scribunto/All" class="xowa-visited">Diagnostics/Scribunto/All</a> 
         <ul>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Basic" id="xolnki_20" title="Diagnostics/Scribunto/Basic" class="xowa-visited">Diagnostics/Scribunto/Basic</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Basic" id="xolnki_20" title="Diagnostics/Scribunto/Basic">Diagnostics/Scribunto/Basic</a>
           </li>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/LuaCommon" id="xolnki_21" title="Diagnostics/Scribunto/LuaCommon" class="xowa-visited">Diagnostics/Scribunto/LuaCommon</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/LuaCommon" id="xolnki_21" title="Diagnostics/Scribunto/LuaCommon">Diagnostics/Scribunto/LuaCommon</a>
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/UstringLibrary" id="xolnki_22" title="Diagnostics/Scribunto/UstringLibrary">Diagnostics/Scribunto/UstringLibrary</a>
